candle-einops-macros/tests/ui/fail/duplicate-new-braced-axis.stderr
error: Axis `copies` appears more than once on the right
 --> tests/ui/fail/duplicate-new-braced-axis.rs:4:21
  |
4 |     let _ = einops!("axis -> {copies} {copies} axis", ());
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
